# MistOCR

./: AGENTS.md  LICENSE  README.md  pyproject.toml
mistocr/: __init__.py  api.py  cli.py  config.py  formatter.py
tests/: test_cli.py  test_formatter.py
