[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistocr"
version = "0.1.0"
description = "CLI tool for OCR using Mistral AI API"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.1.0",
    "keyring>=23.0.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "reportlab>=3.6.0",
    "pillow>=9.0.0",
]

[project.scripts]
mistocr = "mistocr.cli:main"

[project.urls]
"Homepage" = "https://github.com/username/mistocr"
"Bug Tracker" = "https://github.com/username/mistocr/issues" 